--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,13 @@
-/* styles go here */
+
+.form__block {
+  margin-bottom: 20px;
+}
+
+.form__field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form__field:last-child {
+  margin-bottom: 0;
+}
